@@ -1,5 +1,4 @@
 v0.7
-	library tab -> albums, artists, search
 	ability to configure columns for playlist
 	ability to show column headings for sorting
 
